--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -121,6 +121,9 @@ jobs:
           cd build
           python3 ../configure.py --enable-optimize --metamod=${{ env.DEPENDENCIES_ROOT }}/metamod-am --hlsdk=${{ env.DEPENDENCIES_ROOT }}/hlsdk --mysql=${{ env.DEPENDENCIES_ROOT }}/mysql-5.5
           ambuild
+          cd .. ; zip -q -r amxmodx___.zip ./amxmodx
+          cp amxmodx___.zip ./amxmodx 
+ 
       - uses: ilammy/msvc-dev-cmd@v1
         with:
           arch: x86
@@ -134,4 +137,8 @@ jobs:
           cd build
           python3 ../configure.py --enable-optimize --metamod=${{ env.DEPENDENCIES_ROOT_WIN }}\metamod-am --hlsdk=${{ env.DEPENDENCIES_ROOT_WIN }}\hlsdk --mysql=${{ env.DEPENDENCIES_ROOT_WIN }}\mysql-5.5
           ambuild
-          
+
+       - uses: actions/upload-artifact@v3
+        with:
+          name: amxmodx
+          path: amxmodx___.tar.gz         
