--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,4 +140,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: amxmodx ${{ matrix.include.os }}
-          path: ${{ github.workspace }}        
+          path: amxmodx/        
